--- a/src/global.css
+++ b/src/global.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-.main-collector {
+.header-collector {
     background-image: url('./assets/BG1.png');
     background-size: cover;
     width: 1920px;
@@ -12,93 +12,4 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.about-section {
-    background-image: url('./assets/BG2.png');
-    background-position: 10% 100%;
-    width: 100%;
-    height: 960px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: absolute;
-}
-
-.about-section-content {
-    width: 1461px;
-    height: 657px;
-    margin-top: 133px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.about-section-h1 {
-    font-family: Days One;
-    font-weight: 400;
-    font-size: 40px;
-    line-height: 50.92px;
-    text-align: center;
-    color: #000000;
-}
-
-.about-section-description {
-    font-family: Inter;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 32px;
-    text-align: center;
-    color: #474747;
-    margin-top: 18px;
-}
-
-.about-section-row-1 {
-    width: 1445px;
-    position: relative;
-    top: 180px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.about-section-row-2 {
-    width: 1445px;
-    position: relative;
-    top: 335px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.about-section-collector-1 {
-    display: flex;
-    gap: 15px;
-}
-
-.about-section-icon {
-    width: 99px;
-    height: 99px;
-}
-
-.about-section-collector-2 {
-    display: flex;
-    width: 299px;
-    flex-direction: column;
-    justify-content: start;
-    gap: 12px;
-}
-
-.about-section-h2 {
-    font-family: Days One;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 25.46px;
-    color: #000000;
-}
-
-.about-section-p {
-    font-family: Inter;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 20px;
-    color: #474747;
 }
