--- a/src/components/HowSection/ItemWithArrow/ItemWithArrow.module.css
+++ b/src/components/HowSection/ItemWithArrow/ItemWithArrow.module.css
@@ -1,6 +1,16 @@
 .ItemWithArrow {
     display: flex;
+    flex-direction: row;
     gap: 15px;
+    transition: all .3s;
+}
+
+.ItemWithArrowMoved {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    transition: all .6s;
+    transform: translateY(-25px);
 }
 
 .circle {
@@ -39,4 +49,6 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
+    justify-content: center;
+    align-items: center;
 }
