fixed font and button

--- a/src/global.css
+++ b/src/global.css
@@ -13,3 +13,9 @@
     flex-direction: column;
     align-items: center;
 }
+
+@font-face {
+    font-family: Days One;
+    src: url('./fonts/DaysOne-Regular.ttf');
+    font-weight: normal;
+}
