--- a/src/components/AboutSection/AboutSection.module.css
+++ b/src/components/AboutSection/AboutSection.module.css
@@ -1,17 +1,96 @@
-.AboutSection {
+@media (min-width: 1365px) and (max-width: 1367px) {
+    .AboutSection  {
+        display: flex;
+        flex-direction: column;
+        background-image: url('../../assets/1366b2.png') ;
+        background-position:50% 50% ;
+    }
+    
+    .Content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-repeat: no-repeat;
+
+    }
+    
+    .H1 {
+        font-family: Days One;
+        font-weight: 400;
+        font-size: 28px;
+        line-height: 50.92px;
+        text-align: center;
+        color: #000000;
+        margin-top: 30px;
+    }
+    
+    .Description {
+        font-family: Inter;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 32px;
+        text-align: center;
+        color: #474747;
+        margin-top: 12.6px;
+    }
+    
+    .Row1 {
+        margin-top: 91px;
+        display: flex;
+        gap: 35px;
+    }
+    
+    .Row2 {
+        margin-top: 91px;
+        display: flex;
+        gap: 35px;
+        margin-bottom: 91px;
+    }
+    
+    .Collector1 {
+        display: flex;
+        gap: 10.5px;
+    }
+    
+    .Icon {
+        width: 69px;
+        height: 69px;
+    }
+    
+    .Collector2 {
+        display: flex;
+        width: 209px;
+        flex-direction: column;
+        justify-content: start;
+        gap: 8.4px;
+    }
+    
+    .H2 {
+        font-family: Days One;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 25.46px;
+        color: #000000;
+    }
+    
+    .P {
+        font-family: Inter;
+        font-weight: 400;
+        font-size: 12.6px;
+        line-height: 20px;
+        color: #474747;
+    }
+}
+
+@media (min-width: 1920px) {
+    .AboutSection {
     background-image: url('../../assets/BG2.png');
-    background-position: 10% 100%;
-    width: 100%;
-    height: 960px;
+    background-position: 50% 50%;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    position: absolute;
 }
 
 .Content {
-    width: 1461px;
-    height: 657px;
     margin-top: 133px;
     display: flex;
     flex-direction: column;
@@ -38,19 +117,16 @@
 }
 
 .Row1 {
-    width: 1445px;
-    position: relative;
-    top: 180px;
+    margin-top: 130px;
     display: flex;
-    justify-content: space-between;
+    gap: 50px;
 }
 
 .Row2 {
-    width: 1445px;
-    position: relative;
-    top: 335px;
+    margin-top: 130px;
     display: flex;
-    justify-content: space-between;
+    gap: 50px;
+    margin-bottom: 130px;
 }
 
 .Collector1 {
@@ -86,3 +162,5 @@
     line-height: 20px;
     color: #474747;
 }
+}
+
