--- a/src/components/HeroBlock/HeroBlock.module.css
+++ b/src/components/HeroBlock/HeroBlock.module.css
@@ -1,3 +1,4 @@
+@media (min-width: 1365px) and (max-width: 1367px) { 
 .HeroBlock {
     width: 1086px;
     height: 417px;
@@ -31,4 +32,64 @@
     text-align: center;
     color: #FFFFFF;
     margin-bottom: 40px;
+}
+    .HeroBlock {
+        width: 760px;
+        height: 292px;
+        margin-top: 179px;
+    }
+    
+    .h1{
+        font-size: 42px;
+        line-height: 76.38px;
+    }
+    
+    .rectangle {
+        width: 210px;
+        height: 3.5px;
+        border: 2px solid #b8d1f8;
+    }
+    
+    .p {
+        font-size: 19.6px ;
+        line-height: 33.89px;
+    }
+}
+
+@media (min-width: 1920px) {
+    
+.HeroBlock {
+    width: 1086px;
+    height: 417px;
+    margin-top: 256px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.h1{
+    font-family: Days One;
+    font-weight: 400;
+    font-size: 60px;
+    line-height: 76.38px;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+.rectangle {
+    width: 300px;
+    height: 5px;
+    margin: 30px 0;
+    background-color: #FFFFFFB2;
+}
+
+.p {
+    font-family: Inter;
+    font-family: 600;
+    font-size: 28px;
+    line-height: 33.89px;
+    text-align: center;
+    color: #FFFFFF;
+    margin-bottom: 40px;
+}
 }
