--- a/src/components/HowSection/HowSection.module.css
+++ b/src/components/HowSection/HowSection.module.css
@@ -1,12 +1,13 @@
+@media (min-width: 1365px) and (max-width: 1367px) {     
 .HowSection {
-    width: 100%;
-    height: 640px;
-    position: absolute;
-    top: 2000px;
-    background-image: url('../../assets/BG3.png');
+    background-image: url('../../assets/BG1.png');
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
     align-items: center;
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.5);
+    height: 630px;
 }
 
 .H1 {
@@ -27,20 +28,16 @@
     line-height: 32px;
     text-align: center;
     color: #F3F3F3;
-    position: relative;
-    top: 132px;
+    margin-top: 132px;
 }
 
 .collector1 {
     display: flex;
     gap: 65px;
-    position: relative;
-    top: 190px;
+    margin-top: 100px;
 }
 
 .collector2 {
-    position: relative;
-    top: 270px;
     font-family: Inter;
     font-weight: 600;
     color: #F3F3F3;
@@ -51,4 +48,61 @@
     width: 1067px;
     animation-name: moving;
     animation-duration: 1s;
+    margin-top: 30px;
+}
+}
+
+@media (min-width: 1920px) {
+    
+.HowSection {
+    background-image: url('../../assets/BG1.png');
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.5);
+    height: 630px;
+}
+
+.H1 {
+    font-family: Days One;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 50.92px;
+    text-align: center;
+    position: relative;
+    top: 97px;
+    color: #FFFFFF;
+}
+
+.H3 {
+    font-family: Inter;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 32px;
+    text-align: center;
+    color: #F3F3F3;
+    margin-top: 132px;
+}
+
+.collector1 {
+    display: flex;
+    gap: 65px;
+    margin-top: 100px;
+}
+
+.collector2 {
+    font-family: Inter;
+    font-weight: 600;
+    color: #F3F3F3;
+    line-height: 32px;
+    font-size: 20px;
+    text-align: center;
+    transition: all .3s;
+    width: 1067px;
+    animation-name: moving;
+    animation-duration: 1s;
+    margin-top: 30px;
+}
 }
