--- a/src/components/HowSection/ItemWithArrow/ItemWithArrow.module.css
+++ b/src/components/HowSection/ItemWithArrow/ItemWithArrow.module.css
@@ -1,3 +1,139 @@
+@media (min-width: 1365px) and (max-width: 1367px) {
+
+    
+.ItemWithArrow {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    transition: all .3s;
+    cursor: pointer;
+}
+
+.ItemWithArrowMoved {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    transition: all .6s;
+    transform: translateY(-25px);
+}
+
+.circle {
+    width: 92px;
+    height: 92px;
+    border-radius: 50%;
+    border: 4px solid #E2E2E2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.image {
+    width: 50px;
+    height: 50px;
+}
+
+.line {
+    animation-name: moveLine;
+    animation-duration: 1s;
+    width: 152px;
+    height: 17.5px;
+    background-image: url('../../../assets/arrow.png');
+    background-size: cover;
+}
+
+.line:nth-child(2) {
+    animation-name: moveLineSec;
+    animation-duration: 1s;
+    width: 182px;
+    height: 17.5px;
+    background-image: url('../../../assets/arrow.png');
+    background-size: cover;
+}
+
+.lineNone {
+    display: none;
+}
+
+.H1 {
+    font-family: Days One;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 38.19px;
+    text-align: center;
+    color: #E2E2E2;
+}
+
+.collector {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    justify-content: center;
+    align-items: center;
+}
+
+@keyframes moveLine {
+    0% {
+        width: 1px;
+        align-self: self-start;
+    }
+    40% {
+        width: 152px;
+        height: 17.5px;
+    }
+    100% {
+        align-self: center;
+    }
+}
+
+@keyframes moveLineSec {
+    0% {
+        width: 1px;
+        align-self: self-start;
+    }
+    40% {
+        width: 182px;
+        height: 17.5px;
+    }
+    100% {
+        align-self: center;
+    }
+}
+    .ItemWithArrow {
+        gap: 10.5px;
+    }
+
+    .ItemWithArrowMoved {
+        gap: 10.5px;
+    }
+
+    .circle {
+        width: 64.5px;
+        height: 64.4px;
+        border-radius: 50%;
+        border: 2.8px solid #E2E2E2;
+    }
+
+    .image {
+        width: 35px;
+        height: 35px;
+    }
+
+    .line {
+        width: 152px;
+        height: 17.5px;
+    }
+
+    .H1 {
+        font-size: 21px;
+    }
+
+    .collector {
+        gap: 3.5px;
+    }
+}
+
+@media (min-width: 1920px) {
+    
 .ItemWithArrow {
     display: flex;
     flex-direction: row;
@@ -38,6 +174,15 @@
     background-size: cover;
 }
 
+.line:nth-child(2) {
+    animation-name: moveLineSec;
+    animation-duration: 1s;
+    width: 235px;
+    height: 25px;
+    background-image: url('../../../assets/arrow.png');
+    background-size: cover;
+}
+
 .lineNone {
     display: none;
 }
@@ -64,9 +209,26 @@
         width: 1px;
         align-self: self-start;
     }
-    100% {
+    40% {
         width: 217px;
         height: 25px;
+    }
+    100% {
+        align-self: center;
+    }
+}
+
+@keyframes moveLineSec {
+    0% {
+        width: 1px;
         align-self: self-start;
     }
+    40% {
+        width: 235px;
+        height: 25px;
+    }
+    100% {
+        align-self: center;
+    }
+}
 }
