--- a/src/components/OurTeam/OurTeam.module.css
+++ b/src/components/OurTeam/OurTeam.module.css
@@ -1,8 +1,8 @@
+@media (min-width: 1365px) and (max-width: 1367px) {   
+       
 .OurTeam {
     width: 100%;
     height: 640px;
-    position: absolute;
-    top: 4250px;
     background-image: url('../../assets/BG5.png');
 }
 
@@ -28,4 +28,56 @@
 .card {
     width: 364px;
     height: 364px;
+}
+    .OurTeam {
+        height: 448px;
+    }
+
+    .H1 {
+        font-size: 28px;
+        top: 54px;
+    }
+
+    .collector {
+        top: 112px;
+        gap: 84px;
+    }
+
+    .card {
+        width: 255px;
+        height: 255px;
+    }
+}
+
+@media (min-width: 1920px) {
+    
+.OurTeam {
+    width: 100%;
+    height: 640px;
+    background-image: url('../../assets/BG5.png');
+}
+
+.H1 {
+    font-family: Days One;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 50.92px;
+    text-align: center;
+    color: #FFFFFF;
+    position: relative;
+    top: 77px;
+}
+
+.collector {
+    position: relative;
+    top: 160px;
+    display: flex;
+    justify-content: center;
+    gap: 120px;
+}
+
+.card {
+    width: 364px;
+    height: 364px;
+}
 }
