--- a/src/components/SubmitButton/SubmitButton.module.css
+++ b/src/components/SubmitButton/SubmitButton.module.css
@@ -1,3 +1,25 @@
+@media (min-width: 1365px) and (max-width: 1367px) {
+    .SubmitButton {
+    width: 175px;
+    height: 47.6px;
+    border-radius: 10.5px;
+    background-color: #FFFFFF;
+    font-family: Days One;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 25.46px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #156CE7;
+    cursor: pointer;
+    border: none;
+    }
+
+}
+
+@media (min-width: 1920px) { 
 .SubmitButton {
     width: 250px;
     height: 68px;
@@ -14,4 +36,5 @@
     color: #156CE7;
     cursor: pointer;
     border: none;
+}
 }
