--- a/src/global.css
+++ b/src/global.css
@@ -4,14 +4,30 @@
     box-sizing: border-box;
 }
 
-.header-collector {
-    background-image: url('./assets/BG1.png');
-    background-size: cover;
-    width: 1920px;
-    height: 1080px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
+
+@media (min-width: 1365px) and (max-width: 1370px) {
+    .header-collector {
+        background-image: url('./assets/BG1.png');
+        background-size: cover;
+        width: 100%;
+        height: 756px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media (min-width: 1920px) {
+    .header-collector {
+        background-image: url('./assets/BG1.png');
+        background-size: cover;
+        width: 100%;
+        height: 1080px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 @font-face {
